EE-915: Fix 508 of First Time User Profile * Sets focus to next logical item when changing locations * Adds visible checkboxes to topics of interest and screen reader text to indicate topics can be selected with spacebar * Adds outline and box shadow to topic of interest when receives focus * Adds ARIA attributes to relate items together

--- a/drupal/sites/all/modules/custom/frs_location_services/css/first_time_user_profile.css
+++ b/drupal/sites/all/modules/custom/frs_location_services/css/first_time_user_profile.css
@@ -73,7 +73,10 @@
 }
 
 @media screen and (min-width: 40em) {
-	.org-select-grouping, .role-select-grouping, .community-type-grouping, .community-select-grouping {
+	.org-select-grouping, 
+	.role-select-grouping, 
+	.community-type-grouping, 
+	.community-select-grouping {
 	    float:left;
 	    width: 40%;
 	    margin-left: 5%;
